--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 OPS_BOOTSTRAP_GIT_CLONES_SSH="\
 git@github.com:latticexyz/phaserx.git \
-git@github.com:latticexyz/phaserx.git@v1.2.3 \
 git@github.com:latticexyz/mud.git#latticexyz-mud \
-git@github.com:latticexyz/mud.git#latticexyz-mud@create-mud@2.2.14 \
 "
 
+OPS_BOOTSTRAP_GIT_CHECKOUTS="\
+phaserx@v1.2.3 \
+latticexyz-mud@create-mud@2.2.14 \
+"
